# agentica-mini-nixos

./: .gitignore  .gitmodules  LICENSE  README.md  chat.py  flake.nix  pyproject.toml  result
.direnv/: flake-profile-1-link  flake-profile-2-link  flake-profile-9-link
agentica/: agent.py  cache.py  executor_test.py  models.py  repl_explainer.md  responder.py  runtime.py  stubs.py  stubs_test.py
agentica/std/: decorator.py
nix/: agentica_vm.nix
python_agent/: .bash_history  chat.py  pyproject.toml
python_agent/.ipython/profile_default/: history.sqlite
